# pyslider

./: LICENSE  README.md  pyproject.toml
config/: project.py  python.py
doc/: HOWTO.txt  links.txt
src/pyslider/: configs.py  main.py  static.py
