[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyslider"
version = "0.0.1"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Pyslider is a tool to create pdf slides from markdown"
readme = "README.md"
license = "MIT"
keywords=[
    "pdf",
    "slides",
    "powerpoint",
    "marp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyslider"
"Bug Tracker" = "https://github.com/veltzer/pyslider/issues"
"Documentation" = "https://veltzer.github.io/pyslider"
"Download" = "https://pypi.org/project/pyslider/"
"Repository" = "https://github.com/veltzer/pyslider"

[project.scripts]
pyslider = "pyslider.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyslider"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyslider/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"

[tool.uv.pip]
prerelease = "deny"
